# advent-of-code

./: .gitignore  decrypt_all.zsh  encrypt.zsh
.github/workflows/: codspeed-2024.yml  codspeed.yml
2023/: Cargo.toml
2023/output/: day8.dot
2023/src/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day8.rs  day9.rs  lib.rs  utils.rs
2024/: Cargo.toml  decrypt.sh
2024/benches/: day4.rs  day5.rs
2024/input/2024/: day1.txt.gpg  day2.txt.gpg  day3.txt.gpg  day4.txt.gpg
2024/src/: day1.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  utils.rs
2025/: Cargo.toml
2025/src/: byte_grid.rs  byte_search.rs  lib.rs
inputs/: .gitignore
inputs/2025/: 01.input.age
rust/2023/src/: day1.rs  day10.rs  day4.rs  day5.rs  day7.rs  day9.rs  utils.rs
rust/2024/benches/: day4.rs  day5.rs
rust/2024/input/2024/: day5.txt.gpg  day6.txt.gpg
rust/2024/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day22.rs  day24.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  lib.rs  utils.rs
rust/2025/src/: lib.rs
template/: Cargo.toml
template/src/: lib.rs  main.rs
zig/: build.zig.zon
zig/src/: main.zig
