[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
arrayvec = "0.7.6"
bumpalo = { version = "3.16.0", features = ["collections", "boxed", "std"] }
nom = "8.0.0-alpha2"
quadtree_rs = "0.1.3"
regex = "1.11.1"
rustc-hash = "2.1.0"
trie-rs = "0.4.2"
