[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
arrayvec = "0.7.6"
coz = "0.1.3"
nom = "8.0.0-alpha2"
rustc-hash = "2.1.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[profile.coz]
inherits = "release"
debug = true