[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
arrayvec = "0.7.6"
coz = "0.1.3"
memchr = "2.7.4"
nom = "=8.0.0-alpha2"
parking_lot = { version = "0.12.3", features = ["hardware-lock-elision"] }
partitions = "0.2.4"
petgraph = "0.6.5"
radsort = "0.1.1"
rayon = "1.10.0"
rdxsort = "0.3.0"
regex = "1.11.1"
rustc-hash = "2.1.0"
trie-rs = "0.4.2"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[profile.coz]
inherits = "release"
debug = true

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }

[[bench]]
name = "day4"
harness = false

[[bench]]
name = "day5"
harness = false
