[package]
name = "aoc-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bumpalo = { version = "3.19.0", default-features = false, features = ["boxed", "collections", "serde", "std"] }
clap = { version = "4.5.53", features = ["cargo"] }
itertools = "0.14.0"
memchr = "2.7.6"
union-find = "0.4.3"

[profile.release]
lto = true
codegen_units = 1
